--- a/css/index.css
+++ b/css/index.css
@@ -127,7 +127,7 @@ table {
   border-spacing: 0;
 }
 .body-container {
-  max-width: 1000px;
+  max-width: 100%;
   margin: 0 auto;
 }
 .body-container .nav-header {
@@ -147,6 +147,7 @@ table {
   width: 25%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .body-container .nav-header .nav-wrapper .nav-logo img {
   width: 15%;
@@ -165,9 +166,10 @@ table {
 .body-container .nav-header .header-wrapper {
   margin: 1em;
   padding: 1em;
+  margin-bottom: 0;
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
+  justify-content: space-evenly;
 }
 .body-container .nav-header .header-wrapper .header-left {
   margin: 1em;
@@ -204,4 +206,96 @@ table {
   width: 50%;
   color: white;
   background-color: maroon;
+}
+.body-container .main-top-wrapper {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  background-color: maroon;
+  opacity: 0.8;
+}
+.body-container .main-top-wrapper section {
+  margin: 0.5em;
+  padding: 0.5em;
+  line-height: 1.25em;
+}
+.body-container .main-top-wrapper section h2 {
+  font-size: 1.25em;
+  color: maroon;
+  background-color: white;
+  border-radius: 0.5em;
+  margin: 0.5em;
+  padding: 0.5em;
+  width: 50%;
+}
+.body-container .main-top-wrapper section h3 {
+  color: white;
+  font-size: 1.15em;
+}
+.body-container .main-top-wrapper section p {
+  font-size: 1em;
+  color: white;
+  line-height: 1.5em;
+}
+.body-container .header-2 {
+  background-color: white;
+  opacity: 0.8;
+  color: maroon;
+}
+.body-container .header-2 h2 {
+  margin: 0.3em;
+  padding: 0.3em;
+  font-weight: bold;
+  font-size: 1.5em;
+  text-align: center;
+}
+.body-container .main-mid-wrapper {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  cursor: pointer;
+}
+.body-container .main-mid-wrapper .img-wrapper-1 {
+  display: inline-flex;
+  position: relative;
+}
+.body-container .main-mid-wrapper .img-wrapper-1 #img-1 {
+  width: 100%;
+}
+.body-container .main-mid-wrapper .img-wrapper-1 #hidden-p {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  color: white;
+  font-size: 2em;
+  text-align: center;
+  opacity: 1;
+  visibility: hidden;
+  transition: 0.5s;
+}
+.body-container .main-mid-wrapper .img-wrapper-1 #img-1:hover + #hidden-p {
+  opacity: 0.8;
+  visibility: visible;
+}
+.body-container .main-mid-wrapper .img-wrapper-3 {
+  display: inline-flex;
+  position: relative;
+}
+.body-container .main-mid-wrapper .img-wrapper-3 #img-3 {
+  width: 100%;
+}
+.body-container .main-mid-wrapper .img-wrapper-3 #hidden-p3 {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  color: white;
+  font-size: 2em;
+  text-align: center;
+  opacity: 1;
+  visibility: hidden;
+  transition: 0.5s;
+}
+.body-container .main-mid-wrapper .img-wrapper-3 #img-3:hover + #hidden-p3 {
+  opacity: 0.8;
+  visibility: visible;
 }
