--- a/less/index.less
+++ b/less/index.less
@@ -1,29 +1,24 @@
 @import "reset.less";
+@import "variables.less";
 
-html,body {
-    
-    // background-color: red;
-
-}
 // navigation styles
 .body-container{
-    max-width: 1000px;
+    max-width:100%;
     margin: 0 auto;
+
     .nav-header{
         background-image: url(../imgs/stefan-vladimirov-Q_Moi2xjieU-unsplash.jpg);
         background-size:50%;
         opacity: 0.8;
+
         .nav-wrapper{
             background: rgba(255,255,255,0.2);
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin: 1em;
-            padding: 1em;
+            .myFlexMixin(center,space-between);
+            .myMarginMixin(1em,1em);
+
             .nav-logo {
                 width:25%;
-                display: flex;
-                align-items: center;
+                .myFlexMixin(center,center);
 
                 img {
                     width:15%;
@@ -41,22 +36,17 @@ html,body {
                 a {
                     text-decoration: none;
                     color: white;
-                    margin: 0.5em;
-                    padding: 0.5em;
-                    
+                    .myMarginMixin(0.5em, 0.5em);   
                 }
             }
         }
         .header-wrapper {
-            margin: 1em;
-            padding: 1em;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-        
+            .myMarginMixin(1em,1em);
+            margin-bottom: 0;
+            .myFlexMixin(center,space-evenly);
+
             .header-left {
-                margin: 1em;
-                padding: 1em;
+                .myMarginMixin(1em,1em);
                 p {
                     color:white;
                     font-size: 1.5em;
@@ -65,8 +55,8 @@ html,body {
             .header-form {
                 background-color: white;
                 border-radius: 0.5em;
-                margin: 1em;
-                padding: 1em;
+                .myMarginMixin(1em,1em);
+
                 h2 {
                     font-weight: bold;
                     font-size: 1.5em;
@@ -82,8 +72,7 @@ html,body {
                     button {
                         height: 2.5em;
                         border-radius: 0.3em;
-                        margin: 0.3em;
-                        padding: 0.3em;
+                        .myMarginMixin(0.3em,0.3em);
                         width:50%;
                         color:white;
                         background-color: maroon;
@@ -94,4 +83,120 @@ html,body {
             
         }
     }
+    .main-top-wrapper {
+        .myFlexMixin(baseline,space-between);
+        background-color: maroon;
+        opacity: 0.8;
+        // border:0.1em dashed white;
+        // border: 0.15em solid maroon;
+
+        // display: flex;
+        // flex-direction: column;
+        section {
+        //  .myFlexMixin(center,space-between);
+            .myMarginMixin(0.5em,0.5em);
+            line-height: 1.25em;
+        // border:0.2em dashed white;
+        // background-color: white;
+
+
+           
+            h2 {
+                font-size: 1.25em;
+                color: maroon;
+                background-color: white;
+                border-radius: 0.5em;
+                .myMarginMixin(0.5em,0.5em);
+                width: 50%;
+            }
+            h3{
+                color: white;
+                font-size: 1.15em;
+            }
+            p {
+                font-size: 1em;
+                color: white;
+                line-height: 1.5em;
+            }
+        }
+
+    }
+
+    .header-2 {
+        background-color: white;
+        opacity: 0.8;
+        color:maroon;
+        h2{
+        .myMarginMixin(0.3em,0.3em);
+        font-weight: bold;
+        font-size: 1.5em;
+        text-align: center;
+
+        }
+    }
+    .main-mid-wrapper {
+        .myFlexMixin(baseline,space-between);
+        cursor: pointer;
+        .img-wrapper-1  {
+            display: inline-flex;
+            position: relative;
+            #img-1{
+            width: 100%;
+            // .myMarginMixin(0.5em,0.5em);
+            // border-radius: 10px;
+            }
+    
+            #hidden-p {
+                position: absolute;
+                top: 50%;
+                width: 100%;
+                color: white;
+                font-size: 2em;
+                text-align: center;
+                opacity: 1;
+                visibility: hidden;
+                transition: 0.5s;
+            }
+
+            #img-1:hover + #hidden-p {
+                opacity: 0.8;
+                visibility: visible;
+                
+            }
+            
+        }
+        .img-wrapper-3  { 
+            display:inline-flex;
+            position:relative;
+            #img-3{
+            width:100%;
+            // .myMarginMixin(0.5em,0.5em);
+            // border-radius: 10px;
+            }
+            #hidden-p3 {
+                position:absolute;
+                top:50%;
+                width:100%;
+                color: white;
+                font-size: 2em;
+                text-align:center;
+                opacity:1;
+                visibility: hidden;
+                transition: 0.5s;
+            }
+            #img-3:hover + #hidden-p3 {
+                opacity: 0.8;
+                visibility: visible;
+                
+            }
+            
+        }
+                        
+        
+    }
+       
+
+    
+    
 }
+
