--- a/less/index.less
+++ b/less/index.less
@@ -10,18 +10,23 @@
         background-image: url(../imgs/stefan-vladimirov-Q_Moi2xjieU-unsplash.jpg);
         background-size:50%;
         opacity: 0.8;
+        height: 480px;
 
         .nav-wrapper{
             background: rgba(255,255,255,0.2);
             .myFlexMixin(center,space-between);
             .myMarginMixin(1em,1em);
+            margin-top:0;
+            margin-left: 0;
+            margin-right:0;
+            width:100%;
 
             .nav-logo {
                 width:25%;
                 .myFlexMixin(center,center);
 
                 img {
-                    width:20%;
+                    width:15%;
                 }
 
                 h1 {
@@ -83,7 +88,10 @@
                 }
             }
             
+            
         }
+
+
     }
     .main-top-wrapper {
         .myFlexMixin(baseline,space-between);
@@ -274,3 +282,392 @@
     
 }
 
+// Cities styles
+// navigation styles
+.cities-body-container{
+    max-width:100%;
+    margin: 0 auto;
+
+    .cities-nav-header{
+        background-image: url(../imgs/kyler-boone-DrnOxsTcUMg-unsplash.jpg);
+        background-size:50%;
+        opacity: 0.8;
+        height:480px;
+
+        .cities-nav-wrapper{
+            background: rgba(255,255,255,0.2);
+            .myFlexMixin(center,space-between);
+            .myMarginMixin(1em,1em);
+            margin-top:0;
+            margin-left: 0;
+            margin-right:0;
+            width:100%;
+
+            .cities-nav-logo {
+                width:25%;
+                .myFlexMixin(center,center);
+
+                img {
+                    width:15%;
+                }
+
+                h1 {
+                    text-align: center;
+                    font-size: 1.5em;
+                    color: white;
+                    
+                    
+                }
+            }
+            nav {
+                a {
+                    text-decoration: none;
+                    color: white;
+                    .myMarginMixin(0.5em, 0.5em);   
+                }
+            }
+        }
+        .cities-header-wrapper {
+            .myMarginMixin(1em,1em);
+            margin-bottom: 0;
+            .form-container {
+                   .myFlexMixin(center,center);
+                   height:349px;
+                
+                .cities-form {
+                    background-color: white;
+                    width:75%;
+                    
+                    input {
+                        .myMarginMixin(0.5em,0.5em);
+                        margin-right: 0;
+                        padding-right: 0;
+                        color:maroon;
+                        font-size: 1em;
+                        text-align: center;
+                    }
+                    button {
+                        .myMarginMixin(0.5em,0.5em);
+                        background-color: maroon;
+                        opacity: 0.8;
+                        border:none;
+                        color:white;
+                        font-size:1em; 
+                        text-align: center;
+                    }
+                }
+            
+            }
+        }   
+
+
+    }
+    h2 {
+        background-color: maroon;
+        opacity: 0.8;
+        color:white;
+        font-size: 1.2em;
+        .myMarginMixin(0.8em,0.8em);
+        margin-top:0;
+        margin-left: 0;
+        margin-right:0;
+        // width:10%;
+        text-align: center
+        }
+    .cities-main-wrapper { 
+        .cities-main-top-wrapper {
+            .myFlexMixin(center,space-between);
+            .cities-main-left {
+                .myFlexMixin(center,space-between);
+                width:50%;
+                img {
+                    width:50%; 
+                    height: 100%;
+                    border-radius: 1em;
+                }
+                p {
+                    width: 50;
+                    line-break: auto;
+                    line-height: 1.2em;
+                    color:maroon;
+                    .myMarginMixin(0.5em,0.5em);
+                }
+            }
+
+            .cities-main-right {
+                .myFlexMixin(center,space-between);
+                width:50%;
+                img {
+                width: 50%;
+                height: 100%;
+                border-radius: 1em;
+                }
+                p {
+                    width: 50;
+                    line-break: auto;
+                    line-height: 1.2em;
+                    color:maroon;
+                    .myMarginMixin(0.5em,0.5em);
+                }
+            }
+        }
+        .cities-main-bot-wrapper {
+            .myMarginMixin(1em,1em);
+            background-image: url(../imgs/table_glasses.jpg);
+            background-size: 100%;
+            opacity: 0.8;
+            margin-left: 0;
+            margin-right: 0;
+            margin-bottom: 0;
+            .myFlexMixin(center,center);
+            form {
+                input{
+                    .myMarginMixin(1em,1em);
+                    text-align: center;
+                    font-size: 1em;
+                    
+                }
+            }
+            button {
+                .myMarginMixin(0.7em,0.7em);
+                text-align: center;
+                background-color: white;
+                font-size: 1em;
+                border:none;
+                color:maroon;
+            }
+            h2{
+                color:white;
+                font-size: 1.2em;
+                
+            }
+
+
+        }
+    }
+    .cities-footer-wrapper {
+        background-color: maroon;
+        opacity: 0.8;
+        width: 100%;
+    
+
+        .cities-footer-nav {
+            .myFlexMixin(center,space-evenly);
+            .cities-footer-logo {
+                width:25%;
+                .myFlexMixin(center,center);
+
+                img {
+                    width:15%;
+                }
+                h1{
+                    text-align: center;
+                    font-size: 1.5em;
+                    color: white;  
+                }
+
+            }
+
+            nav{
+                display: flex;
+                flex-direction: column;
+                .myMarginMixin(1em,1em);
+
+                a {
+                    text-decoration: none;
+                    color: white;
+                    font-size: 1em;
+                    line-height: 1.5em;
+                    
+                
+                }
+            }
+        }
+        h3 {
+            color: white;
+            font-size: 1em;
+            text-align: center;
+            .myMarginMixin(1em,1em);
+        }
+
+    }
+
+      
+    //     // section {
+    //     // //  .myFlexMixin(center,space-between);
+    //     //     .myMarginMixin(0.5em,0.5em);
+    //     //     line-height: 1.25em;
+    //     // // border:0.2em dashed white;
+    //     // // background-color: white;
+
+
+           
+    //     //     h2 {
+    //     //         font-size: 1.25em;
+    //     //         color: maroon;
+    //     //         background-color: white;
+    //     //         border-radius: 0.5em;
+    //     //         .myMarginMixin(0.5em,0.5em);
+    //     //         width: 50%;
+    //     //     }
+    //     //     h3{
+    //     //         color: white;
+    //     //         font-size: 1.15em;
+    //     //     }
+    //     //     p {
+    //     //         font-size: 1em;
+    //     //         color: white;
+    //     //         line-height: 1.5em;
+    //     //     }
+    //     // }
+
+
+    // .header-2 {
+    //     background-color: white;
+    //     opacity: 0.8;
+    //     color:maroon;
+    //     h2{
+    //     .myMarginMixin(0.3em,0.3em);
+    //     font-weight: bold;
+    //     font-size: 1.5em;
+    //     text-align: center;
+
+    //     }
+    // }
+    // .main-mid-wrapper {
+    //     .myFlexMixin(baseline,space-between);
+    //     cursor: pointer;
+    //     .img-wrapper-1  {
+    //         display: inline-flex;
+    //         position: relative;
+    //         #img-1{
+    //         width: 100%;
+    //         // .myMarginMixin(0.5em,0.5em);
+    //         // border-radius: 10px;
+    //         }
+    
+    //         #hidden-p {
+    //             position: absolute;
+    //             top: 50%;
+    //             width: 100%;
+    //             color: white;
+    //             font-size: 2em;
+    //             text-align: center;
+    //             opacity: 1;
+    //             visibility: hidden;
+    //             transition: 0.5s;
+    //         }
+
+    //         #img-1:hover + #hidden-p {
+    //             opacity: 0.8;
+    //             visibility: visible;
+                
+    //         }
+            
+    //     }
+    //     .img-wrapper-3  { 
+    //         display:inline-flex;
+    //         position:relative;
+    //         #img-3{
+    //         width:100%;
+    //         // .myMarginMixin(0.5em,0.5em);
+    //         // border-radius: 10px;
+    //         }
+    //         #hidden-p3 {
+    //             position:absolute;
+    //             top:50%;
+    //             width:100%;
+    //             color: white;
+    //             font-size: 2em;
+    //             text-align:center;
+    //             opacity:1;
+    //             visibility: hidden;
+    //             transition: 0.5s;
+    //         }
+    //         #img-3:hover + #hidden-p3 {
+    //             opacity: 0.8;
+    //             visibility: visible;
+                
+    //         }
+            
+    //     }
+                        
+        
+    // }
+
+    // .main-bot-wrapper {
+    //     .myFlexMixin(center,space-between);
+    //     section{
+    //         .myFlexMixin(center,center);
+    //         flex-direction: column;
+    //         .myMarginMixin(1em,1em);
+
+    //         p{
+    //             color:maroon;
+    //             font-size: 1.2em;
+    //             line-height:1.2em;
+    //             text-align: center;
+    //         }
+    //         button {
+    //             .myMarginMixin(0.8em,0.8em);
+    //             text-align: center;
+    //             background-color: maroon;
+    //             opacity:0.8;
+    //             color: white;
+    //             border: none;
+    //             border-radius: 0.3em;
+
+    //         }
+    //     }
+       
+    // }
+       
+    // footer {
+    //     background-color: maroon;
+    //     opacity: 0.8;
+    //     width: 100%;
+    
+
+    //     .footer-nav {
+    //         .myFlexMixin(center,space-evenly);
+    //         .footer-logo {
+    //             width:25%;
+    //             .myFlexMixin(center,center);
+
+    //             img {
+    //                 width:15%;
+    //             }
+    //             h1{
+    //                 text-align: center;
+    //                 font-size: 1.5em;
+    //                 color: white;  
+    //             }
+
+    //         }
+
+    //         nav{
+    //             display: flex;
+    //             flex-direction: column;
+    //             .myMarginMixin(1em,1em);
+
+    //             a {
+    //                 text-decoration: none;
+    //                 color: white;
+    //                 font-size: 1em;
+    //                 line-height: 1.5em;
+                    
+                
+    //             }
+    //         }
+    //     }
+    //     h3 {
+    //         color: white;
+    //         font-size: 1em;
+    //         text-align: center;
+    //         .myMarginMixin(1em,1em);
+    //     }
+
+    // }
+    
+    
+}
