--- a/less/index.less
+++ b/less/index.less
@@ -3,8 +3,9 @@
 
 // navigation styles
 .body-container{
-    max-width:100%;
+    max-width: 1200px;
     margin: 0 auto;
+    
 
     .nav-header{
         background-image: url(../imgs/stefan-vladimirov-Q_Moi2xjieU-unsplash.jpg);
@@ -285,7 +286,7 @@
 // Cities styles
 // navigation styles
 .cities-body-container{
-    max-width:100%;
+    max-width: 1200px;
     margin: 0 auto;
 
     .cities-nav-header{
@@ -336,24 +337,24 @@
                 
                 .cities-form {
                     background-color: white;
-                    width:75%;
+                    width:85%;
                     
                     input {
-                        .myMarginMixin(0.5em,0.5em);
-                        margin-right: 0;
-                        padding-right: 0;
+                        .myMarginMixin(0.3em,0.3em);
                         color:maroon;
                         font-size: 1em;
                         text-align: center;
+                        width:18%;
                     }
                     button {
-                        .myMarginMixin(0.5em,0.5em);
+                        .myMarginMixin(0.3em,0.3em);
                         background-color: maroon;
                         opacity: 0.8;
                         border:none;
                         color:white;
                         font-size:1em; 
                         text-align: center;
+                        width:12%;
                     }
                 }
             
