--- a/less/index.less
+++ b/less/index.less
@@ -19,7 +19,7 @@
             .myMarginMixin(1em,1em);
             margin-top:0;
             margin-left: 0;
-            margin-right:0;
+            margin-right:0.5em;
             width:100%;
 
             .nav-logo {
@@ -333,7 +333,7 @@
             margin-bottom: 0;
             .form-container {
                    .myFlexMixin(center,center);
-                   height:349px;
+                   height:358px;
                 
                 .cities-form {
                     background-color: white;
@@ -341,7 +341,6 @@
                     
                     input {
                         .myMarginMixin(0.3em,0.3em);
-                        color:maroon;
                         font-size: 1em;
                         text-align: center;
                         width:18%;
