--- a/less/index.less
+++ b/less/index.less
@@ -1,16 +1,16 @@
 @import "reset.less";
 @import "variables.less";
+// @import url('https://fonts.googleapis.com/css?family=Livvic&display=swap');
 
 // navigation styles
 .body-container{
-    max-width: 1200px;
-    margin: 0 auto;
+    max-width: 1000px;
+    margin:0 auto;
+    font-family: 'Livvic', sans-serif;
     
-
     .nav-header{
-        background-image: url(../imgs/stefan-vladimirov-Q_Moi2xjieU-unsplash.jpg);
-        background-size:50%;
-        opacity: 0.8;
+        background-image: url(../imgs/eiliv-sonas-aceron-ZuIDLSz3XLg-unsplash.jpg);
+        background-size:100%;
         height: 480px;
 
         .nav-wrapper{
@@ -53,6 +53,7 @@
 
             .header-left {
                 .myMarginMixin(1em,1em);
+                
                 p {
                     color:white;
                     font-size: 1.5em;
@@ -97,7 +98,6 @@
     .main-top-wrapper {
         .myFlexMixin(baseline,space-between);
         background-color: maroon;
-        opacity: 0.8;
         // border:0.1em dashed white;
         // border: 0.15em solid maroon;
 
@@ -223,7 +223,6 @@
                 .myMarginMixin(0.8em,0.8em);
                 text-align: center;
                 background-color: maroon;
-                opacity:0.8;
                 color: white;
                 border: none;
                 border-radius: 0.3em;
@@ -235,7 +234,6 @@
        
     footer {
         background-color: maroon;
-        opacity: 0.8;
         width: 100%;
     
 
@@ -286,13 +284,13 @@
 // Cities styles
 // navigation styles
 .cities-body-container{
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
+    font-family: 'Livvic', sans-serif;
 
     .cities-nav-header{
         background-image: url(../imgs/kyler-boone-DrnOxsTcUMg-unsplash.jpg);
-        background-size:50%;
-        opacity: 0.8;
+        background-size:100%;
         height:480px;
 
         .cities-nav-wrapper{
@@ -348,7 +346,6 @@
                     button {
                         .myMarginMixin(0.3em,0.3em);
                         background-color: maroon;
-                        opacity: 0.8;
                         border:none;
                         color:white;
                         font-size:1em; 
@@ -364,7 +361,6 @@
     }
     h2 {
         background-color: maroon;
-        opacity: 0.8;
         color:white;
         font-size: 1.2em;
         .myMarginMixin(0.8em,0.8em);
@@ -415,7 +411,6 @@
             .myMarginMixin(1em,1em);
             background-image: url(../imgs/table_glasses.jpg);
             background-size: 100%;
-            opacity: 0.8;
             margin-left: 0;
             margin-right: 0;
             margin-bottom: 0;
@@ -431,15 +426,15 @@
             button {
                 .myMarginMixin(0.7em,0.7em);
                 text-align: center;
-                background-color: white;
+                background-color: maroon;
                 font-size: 1em;
                 border:none;
-                color:maroon;
+                color: white;
+                border-radius: 0.5em;
             }
             h2{
                 color:white;
                 font-size: 1.2em;
-                
             }
 
 
@@ -447,7 +442,6 @@
     }
     .cities-footer-wrapper {
         background-color: maroon;
-        opacity: 0.8;
         width: 100%;
     
 
