--- a/css/index.css
+++ b/css/index.css
@@ -127,32 +127,65 @@ table {
   border-spacing: 0;
 }
 .body-container {
-  max-width: 1000px;
-  margin: 0 auto;
+  max-width: 100%;
+  margin: 0 8%;
   font-family: 'Livvic', sans-serif;
 }
 .body-container .nav-header {
   background-image: url(../imgs/eiliv-sonas-aceron-ZuIDLSz3XLg-unsplash.jpg);
   background-size: 100%;
-  height: 480px;
+  width: 100%;
 }
 .body-container .nav-header .nav-wrapper {
   background: rgba(255, 255, 255, 0.2);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 1em;
-  padding: 1em;
+  margin: 0.3em;
+  padding: 0.3em;
   margin-top: 0;
   margin-left: 0;
-  margin-right: 0.5em;
   width: 100%;
+}
+@media (max-width:800px) {
+  .body-container .nav-header .nav-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+}
+@media (max-width:500px) {
+  .body-container .nav-header .nav-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+  }
 }
 .body-container .nav-header .nav-wrapper .nav-logo {
   width: 25%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+}
+@media (max-width:800px) {
+  .body-container .nav-header .nav-wrapper .nav-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 50%;
+  }
+}
+@media (max-width:500px) {
+  .body-container .nav-header .nav-wrapper .nav-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 50%;
+  }
 }
 .body-container .nav-header .nav-wrapper .nav-logo img {
   width: 15%;
@@ -161,12 +194,60 @@ table {
   text-align: center;
   font-size: 1.5em;
   color: white;
+  width: 15%;
+}
+@media (max-width:800px) {
+  .body-container .nav-header .nav-wrapper .nav-logo h1 {
+    font-size: 1em;
+  }
+}
+@media (max-width:500px) {
+  .body-container .nav-header .nav-wrapper .nav-logo h1 {
+    font-size: 1em;
+  }
+}
+@media (max-width:800px) {
+  .body-container .nav-header .nav-wrapper nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+  }
+}
+@media (max-width:500px) {
+  .body-container .nav-header .nav-wrapper nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+  }
 }
 .body-container .nav-header .nav-wrapper nav a {
   text-decoration: none;
   color: white;
   margin: 0.5em;
   padding: 0.5em;
+  width: 15%;
+}
+@media (max-width:800px) {
+  .body-container .nav-header .nav-wrapper nav a {
+    margin: 0.2em;
+    padding: 0.2em;
+    text-align: center;
+    font-size: 1em;
+  }
+}
+@media (max-width:500px) {
+  .body-container .nav-header .nav-wrapper nav a {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-size: 1em;
+  }
 }
 .body-container .nav-header .header-wrapper {
   margin: 1em;
@@ -175,6 +256,23 @@ table {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  width: 90%;
+}
+@media (max-width:800px) {
+  .body-container .nav-header .header-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+  }
+}
+@media (max-width:500px) {
+  .body-container .nav-header .header-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+  }
 }
 .body-container .nav-header .header-wrapper .header-left {
   margin: 1em;
@@ -220,6 +318,16 @@ table {
   justify-content: space-between;
   background-color: maroon;
 }
+@media (max-width:800px) {
+  .body-container .main-top-wrapper {
+    flex-direction: column;
+  }
+}
+@media (max-width:500px) {
+  .body-container .main-top-wrapper {
+    flex-direction: column;
+  }
+}
 .body-container .main-top-wrapper section {
   margin: 0.5em;
   padding: 0.5em;
@@ -242,10 +350,10 @@ table {
   font-size: 1em;
   color: white;
   line-height: 1.5em;
+  line-break: auto;
 }
 .body-container .header-2 {
   background-color: white;
-  opacity: 0.8;
   color: maroon;
 }
 .body-container .header-2 h2 {
@@ -257,58 +365,94 @@ table {
 }
 .body-container .main-mid-wrapper {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
   cursor: pointer;
+}
+@media (max-width:800px) {
+  .body-container .main-mid-wrapper {
+    flex-direction: column;
+  }
+}
+@media (max-width:500px) {
+  .body-container .main-mid-wrapper {
+    flex-direction: column;
+  }
 }
 .body-container .main-mid-wrapper .img-wrapper-1 {
   display: inline-flex;
   position: relative;
 }
 .body-container .main-mid-wrapper .img-wrapper-1 #img-1 {
-  width: 100%;
+  width: 80%;
+  border-radius: 0.8em;
+  margin: 0.5em;
+  padding: 0.5em;
 }
 .body-container .main-mid-wrapper .img-wrapper-1 #hidden-p {
   position: absolute;
-  top: 50%;
+  top: 30%;
   width: 100%;
   color: white;
-  font-size: 2em;
+  font-weight: bold;
+  font-size: 1.5em;
+  line-height: 1.2em;
   text-align: center;
-  opacity: 1;
-  visibility: hidden;
+  opacity: 0.2;
+  visibility: visible;
   transition: 0.5s;
 }
 .body-container .main-mid-wrapper .img-wrapper-1 #img-1:hover + #hidden-p {
-  opacity: 0.8;
+  opacity: 1;
   visibility: visible;
+}
+.body-container .main-mid-wrapper .img-wrapper-1 #img-1:hover {
+  opacity: 0.5;
 }
 .body-container .main-mid-wrapper .img-wrapper-3 {
   display: inline-flex;
   position: relative;
 }
 .body-container .main-mid-wrapper .img-wrapper-3 #img-3 {
-  width: 100%;
+  width: 80%;
+  border-radius: 0.8em;
+  margin: 0.5em;
+  padding: 0.5em;
 }
 .body-container .main-mid-wrapper .img-wrapper-3 #hidden-p3 {
   position: absolute;
-  top: 50%;
+  top: 30%;
   width: 100%;
   color: white;
-  font-size: 2em;
+  font-weight: bold;
+  font-size: 1.5em;
+  line-height: 1.2em;
   text-align: center;
-  opacity: 1;
-  visibility: hidden;
+  opacity: 0.2;
+  visibility: visible;
   transition: 0.5s;
 }
 .body-container .main-mid-wrapper .img-wrapper-3 #img-3:hover + #hidden-p3 {
-  opacity: 0.8;
+  opacity: 1;
   visibility: visible;
+}
+.body-container .main-mid-wrapper .img-wrapper-3 #img-3:hover {
+  opacity: 0.5;
 }
 .body-container .main-bot-wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+@media (max-width:800px) {
+  .body-container .main-bot-wrapper {
+    flex-direction: column;
+  }
+}
+@media (max-width:500px) {
+  .body-container .main-bot-wrapper {
+    flex-direction: column;
+  }
 }
 .body-container .main-bot-wrapper section {
   display: flex;
@@ -348,6 +492,16 @@ table {
   align-items: center;
   justify-content: center;
 }
+@media (max-width:800px) {
+  .body-container footer .footer-nav .footer-logo {
+    flex-direction: column;
+  }
+}
+@media (max-width:500px) {
+  .body-container footer .footer-nav .footer-logo {
+    display: none;
+  }
+}
 .body-container footer .footer-nav .footer-logo img {
   width: 15%;
 }
@@ -355,6 +509,11 @@ table {
   text-align: center;
   font-size: 1.5em;
   color: white;
+}
+@media (max-width:800px) {
+  .body-container footer .footer-nav .footer-logo h1 {
+    font-size: 1em;
+  }
 }
 .body-container footer .footer-nav nav {
   display: flex;
