--- a/less/index.less
+++ b/less/index.less
@@ -4,52 +4,116 @@
 
 // navigation styles
 .body-container{
-    max-width: 1000px;
-    margin:0 auto;
+    max-width: 100%;
+     margin:0 8%;
     font-family: 'Livvic', sans-serif;
+    // object-fit: contain;
     
     .nav-header{
         background-image: url(../imgs/eiliv-sonas-aceron-ZuIDLSz3XLg-unsplash.jpg);
         background-size:100%;
-        height: 480px;
+         width:100%;
 
         .nav-wrapper{
             background: rgba(255,255,255,0.2);
             .myFlexMixin(center,space-between);
-            .myMarginMixin(1em,1em);
+            .myMarginMixin(0.3em,0.3em);
             margin-top:0;
-            margin-left: 0;
-            margin-right:0.5em;
+             margin-left: 0;
             width:100%;
+
+            @media @tablet {
+                .myFlexMixin(center,space-between);
+                flex-direction: column;
+            }
+            @media @mobile {
+                .myFlexMixin(center,space-between);
+                flex-direction: column;
+            }
 
             .nav-logo {
                 width:25%;
-                .myFlexMixin(center,center);
+                .myFlexMixin(center,flex-start);
 
+                @media @tablet {
+                    .myFlexMixin(center,center);
+                    flex-direction: column;
+                    width:50%;   
+                }
+                @media @mobile { 
+                .myFlexMixin(center,center); 
+                flex-direction: column;
+                width:50%;
+                }
                 img {
                     width:15%;
                 }
-
                 h1 {
                     text-align: center;
                     font-size: 1.5em;
                     color: white;
-                    
+                    width:15%;
+                    @media @tablet {
+                         font-size: 1em;
+                    }
+                    @media @mobile { 
+                        font-size: 1em;
+                    } 
                     
                 }
             }
+        
             nav {
+                @media @tablet {
+                    .myFlexMixin(center,space-between);
+                    flex-direction: column;
+                    .myMarginMixin(0, 0);
+                }
+               
+                @media @mobile {
+                    .myFlexMixin(center,space-between);
+                    flex-direction: column;
+                    .myMarginMixin(0, 0);
+                }
+                
                 a {
                     text-decoration: none;
                     color: white;
-                    .myMarginMixin(0.5em, 0.5em);   
+                    .myMarginMixin(0.5em, 0.5em);
+                    width:15%;
+
+                    @media @tablet {
+                        .myMarginMixin(0.2em, 0.2em);
+                        text-align: center;
+                        font-size: 1em;
+                    }
+                   
+                    @media @mobile {
+                        .myMarginMixin(0, 0);
+                        text-align: center;
+                        font-size: 1em;
+                    }
+                
                 }
+
             }
         }
         .header-wrapper {
             .myMarginMixin(1em,1em);
             margin-bottom: 0;
             .myFlexMixin(center,space-evenly);
+            width:90%;
+            @media @tablet {
+                .myFlexMixin(center,space-evenly);
+                flex-direction: column;
+
+            }
+
+            @media @mobile {
+                .myFlexMixin(center,space-evenly);
+                flex-direction: column;
+
+            }
 
             .header-left {
                 .myMarginMixin(1em,1em);
@@ -98,19 +162,15 @@
     .main-top-wrapper {
         .myFlexMixin(baseline,space-between);
         background-color: maroon;
-        // border:0.1em dashed white;
-        // border: 0.15em solid maroon;
-
-        // display: flex;
-        // flex-direction: column;
+        @media @tablet {
+            flex-direction: column;
+        }
+        @media @mobile {
+            flex-direction: column;
+        }
         section {
-        //  .myFlexMixin(center,space-between);
             .myMarginMixin(0.5em,0.5em);
             line-height: 1.25em;
-        // border:0.2em dashed white;
-        // background-color: white;
-
-
            
             h2 {
                 font-size: 1.25em;
@@ -128,6 +188,7 @@
                 font-size: 1em;
                 color: white;
                 line-height: 1.5em;
+                line-break: auto;
             }
         }
 
@@ -135,7 +196,6 @@
 
     .header-2 {
         background-color: white;
-        opacity: 0.8;
         color:maroon;
         h2{
         .myMarginMixin(0.3em,0.3em);
@@ -143,62 +203,89 @@
         font-size: 1.5em;
         text-align: center;
 
+
         }
     }
     .main-mid-wrapper {
-        .myFlexMixin(baseline,space-between);
+        .myFlexMixin(center,space-between);
         cursor: pointer;
+
+        @media @tablet {
+            flex-direction: column;
+        }
+
+        @media @mobile {
+            flex-direction: column;
+        }
         .img-wrapper-1  {
             display: inline-flex;
             position: relative;
-            #img-1{
-            width: 100%;
-            // .myMarginMixin(0.5em,0.5em);
-            // border-radius: 10px;
+            #img-1  {
+            width: 80%;
+            border-radius: 0.8em;
+            .myMarginMixin(0.5em,0.5em);
             }
     
             #hidden-p {
                 position: absolute;
-                top: 50%;
+                top: 30%;
                 width: 100%;
                 color: white;
-                font-size: 2em;
+                font-weight: bold;
+                font-size: 1.5em;
+                line-height: 1.2em;
                 text-align: center;
-                opacity: 1;
-                visibility: hidden;
+                opacity: 0.2;
+                visibility: visible;
                 transition: 0.5s;
             }
 
-            #img-1:hover + #hidden-p {
-                opacity: 0.8;
+           #img-1:hover + #hidden-p {
+                opacity: 1;
                 visibility: visible;
                 
             }
+
+            #img-1:hover {
+                opacity:0.5 ;
+
+            }
+
             
         }
         .img-wrapper-3  { 
             display:inline-flex;
             position:relative;
-            #img-3{
-            width:100%;
-            // .myMarginMixin(0.5em,0.5em);
-            // border-radius: 10px;
+
+            #img-3  {
+            width:80%;
+            border-radius: 0.8em;
+            .myMarginMixin(0.5em,0.5em);
             }
+
             #hidden-p3 {
                 position:absolute;
-                top:50%;
+                top:30%;
                 width:100%;
                 color: white;
-                font-size: 2em;
+                font-weight: bold;
+                font-size: 1.5em;
+                line-height: 1.2em;
                 text-align:center;
-                opacity:1;
-                visibility: hidden;
+                opacity:0.2;
+                visibility: visible;
                 transition: 0.5s;
             }
+
             #img-3:hover + #hidden-p3 {
-                opacity: 0.8;
+                opacity: 1;
                 visibility: visible;
                 
+            }
+
+            #img-3:hover {
+                opacity:0.5 ;
+
             }
             
         }
@@ -208,7 +295,14 @@
 
     .main-bot-wrapper {
         .myFlexMixin(center,space-between);
-        section{
+
+        @media @tablet {
+            flex-direction: column;
+        }
+        @media @mobile {
+            flex-direction: column;
+        }
+        section {
             .myFlexMixin(center,center);
             flex-direction: column;
             .myMarginMixin(1em,1em);
@@ -236,12 +330,19 @@
         background-color: maroon;
         width: 100%;
     
-
         .footer-nav {
             .myFlexMixin(center,space-evenly);
+
             .footer-logo {
                 width:25%;
                 .myFlexMixin(center,center);
+
+                @media @tablet {
+                    flex-direction: column;
+                }
+                @media @mobile {
+                   display: none;
+                }
 
                 img {
                     width:15%;
@@ -250,6 +351,9 @@
                     text-align: center;
                     font-size: 1.5em;
                     color: white;  
+                    @media @tablet {
+                        font-size: 1em;
+                    }
                 }
 
             }
