--- a/css/index.css
+++ b/css/index.css
@@ -149,17 +149,11 @@ table {
 }
 @media (max-width:800px) {
   .body-container .nav-header .nav-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     flex-direction: column;
   }
 }
 @media (max-width:500px) {
   .body-container .nav-header .nav-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     flex-direction: column;
   }
 }
@@ -194,17 +188,6 @@ table {
   text-align: center;
   font-size: 1.5em;
   color: white;
-  width: 15%;
-}
-@media (max-width:800px) {
-  .body-container .nav-header .nav-wrapper .nav-logo h1 {
-    font-size: 1em;
-  }
-}
-@media (max-width:500px) {
-  .body-container .nav-header .nav-wrapper .nav-logo h1 {
-    font-size: 1em;
-  }
 }
 @media (max-width:800px) {
   .body-container .nav-header .nav-wrapper nav {
@@ -231,22 +214,17 @@ table {
   color: white;
   margin: 0.5em;
   padding: 0.5em;
-  width: 15%;
 }
 @media (max-width:800px) {
   .body-container .nav-header .nav-wrapper nav a {
     margin: 0.2em;
     padding: 0.2em;
-    text-align: center;
-    font-size: 1em;
   }
 }
 @media (max-width:500px) {
   .body-container .nav-header .nav-wrapper nav a {
     margin: 0;
     padding: 0;
-    text-align: center;
-    font-size: 1em;
   }
 }
 .body-container .nav-header .header-wrapper {
@@ -515,6 +493,11 @@ table {
     font-size: 1em;
   }
 }
+@media (max-width:500px) {
+  .body-container footer .footer-nav .footer-logo h1 {
+    font-size: 1em;
+  }
+}
 .body-container footer .footer-nav nav {
   display: flex;
   flex-direction: column;
@@ -535,14 +518,14 @@ table {
   padding: 1em;
 }
 .cities-body-container {
-  max-width: 1000px;
-  margin: 0 auto;
+  max-width: 100%;
+  margin: 0 8%;
   font-family: 'Livvic', sans-serif;
 }
 .cities-body-container .cities-nav-header {
   background-image: url(../imgs/kyler-boone-DrnOxsTcUMg-unsplash.jpg);
   background-size: 100%;
-  height: 480px;
+  width: 100%;
 }
 .cities-body-container .cities-nav-header .cities-nav-wrapper {
   background: rgba(255, 255, 255, 0.2);
@@ -556,11 +539,39 @@ table {
   margin-right: 0;
   width: 100%;
 }
+@media (max-width:800px) {
+  .cities-body-container .cities-nav-header .cities-nav-wrapper {
+    flex-direction: column;
+  }
+}
+@media (max-width:500px) {
+  .cities-body-container .cities-nav-header .cities-nav-wrapper {
+    flex-direction: column;
+  }
+}
 .cities-body-container .cities-nav-header .cities-nav-wrapper .cities-nav-logo {
   width: 25%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+@media (max-width:800px) {
+  .cities-body-container .cities-nav-header .cities-nav-wrapper .cities-nav-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 50%;
+  }
+}
+@media (max-width:500px) {
+  .cities-body-container .cities-nav-header .cities-nav-wrapper .cities-nav-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 50%;
+  }
 }
 .cities-body-container .cities-nav-header .cities-nav-wrapper .cities-nav-logo img {
   width: 15%;
@@ -570,35 +581,100 @@ table {
   font-size: 1.5em;
   color: white;
 }
+@media (max-width:800px) {
+  .cities-body-container .cities-nav-header .cities-nav-wrapper nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+  }
+}
+@media (max-width:500px) {
+  .cities-body-container .cities-nav-header .cities-nav-wrapper nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+  }
+}
 .cities-body-container .cities-nav-header .cities-nav-wrapper nav a {
   text-decoration: none;
   color: white;
   margin: 0.5em;
   padding: 0.5em;
 }
-.cities-body-container .cities-nav-header .cities-header-wrapper {
+@media (max-width:800px) {
+  .cities-body-container .cities-nav-header .cities-nav-wrapper nav a {
+    margin: 0.2em;
+    padding: 0.2em;
+  }
+}
+@media (max-width:500px) {
+  .cities-body-container .cities-nav-header .cities-nav-wrapper nav a {
+    margin: 0;
+    padding: 0;
+  }
+}
+.cities-body-container .cities-header-wrapper {
   margin: 1em;
   padding: 1em;
   margin-bottom: 0;
 }
-.cities-body-container .cities-nav-header .cities-header-wrapper .form-container {
+.cities-body-container .cities-header-wrapper .form-container {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 358px;
 }
-.cities-body-container .cities-nav-header .cities-header-wrapper .form-container .cities-form {
+.cities-body-container .cities-header-wrapper .form-container .cities-form {
   background-color: white;
   width: 85%;
+  border-radius: 0.5em;
 }
-.cities-body-container .cities-nav-header .cities-header-wrapper .form-container .cities-form input {
+.cities-body-container .cities-header-wrapper .form-container .cities-form form {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+@media (max-width:800px) {
+  .cities-body-container .cities-header-wrapper .form-container .cities-form form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+}
+@media (max-width:500px) {
+  .cities-body-container .cities-header-wrapper .form-container .cities-form form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+}
+.cities-body-container .cities-header-wrapper .form-container .cities-form form input {
   margin: 0.3em;
   padding: 0.3em;
   font-size: 1em;
   text-align: center;
-  width: 18%;
+  width: 20%;
 }
-.cities-body-container .cities-nav-header .cities-header-wrapper .form-container .cities-form button {
+@media (max-width:800px) {
+  .cities-body-container .cities-header-wrapper .form-container .cities-form form input {
+    width: 90%;
+  }
+}
+@media (max-width:500px) {
+  .cities-body-container .cities-header-wrapper .form-container .cities-form form input {
+    width: 90%;
+  }
+}
+.cities-body-container .cities-header-wrapper .form-container .cities-form form button {
   margin: 0.3em;
   padding: 0.3em;
   background-color: maroon;
@@ -606,9 +682,20 @@ table {
   color: white;
   font-size: 1em;
   text-align: center;
-  width: 12%;
+  width: 20%;
+  border-radius: 0.5em;
 }
-.cities-body-container h2 {
+@media (max-width:800px) {
+  .cities-body-container .cities-header-wrapper .form-container .cities-form form button {
+    width: 30%;
+  }
+}
+@media (max-width:500px) {
+  .cities-body-container .cities-header-wrapper .form-container .cities-form form button {
+    width: 30%;
+  }
+}
+.cities-body-container .cities-h2 {
   background-color: maroon;
   color: white;
   font-size: 1.2em;
@@ -624,19 +711,51 @@ table {
   align-items: center;
   justify-content: space-between;
 }
+@media (max-width:800px) {
+  .cities-body-container .cities-main-wrapper .cities-main-top-wrapper {
+    flex-direction: column;
+  }
+}
+@media (max-width:500px) {
+  .cities-body-container .cities-main-wrapper .cities-main-top-wrapper {
+    flex-direction: column;
+  }
+}
 .cities-body-container .cities-main-wrapper .cities-main-top-wrapper .cities-main-left {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 50%;
+  margin: 0.5em;
+  padding: 0.5em;
+}
+@media (max-width:800px) {
+  .cities-body-container .cities-main-wrapper .cities-main-top-wrapper .cities-main-left {
+    width: 100%;
+  }
+}
+@media (max-width:500px) {
+  .cities-body-container .cities-main-wrapper .cities-main-top-wrapper .cities-main-left {
+    flex-direction: column;
+    width: 100%;
+  }
 }
 .cities-body-container .cities-main-wrapper .cities-main-top-wrapper .cities-main-left img {
   width: 50%;
   height: 100%;
   border-radius: 1em;
 }
+@media (max-width:800px) {
+  .cities-body-container .cities-main-wrapper .cities-main-top-wrapper .cities-main-left img {
+    width: 50%;
+  }
+}
+@media (max-width:500px) {
+  .cities-body-container .cities-main-wrapper .cities-main-top-wrapper .cities-main-left img {
+    width: 100%;
+  }
+}
 .cities-body-container .cities-main-wrapper .cities-main-top-wrapper .cities-main-left p {
-  width: 50;
   line-break: auto;
   line-height: 1.2em;
   color: maroon;
@@ -648,11 +767,34 @@ table {
   align-items: center;
   justify-content: space-between;
   width: 50%;
+  margin: 0.5em;
+  padding: 0.5em;
+}
+@media (max-width:800px) {
+  .cities-body-container .cities-main-wrapper .cities-main-top-wrapper .cities-main-right {
+    width: 100%;
+  }
+}
+@media (max-width:500px) {
+  .cities-body-container .cities-main-wrapper .cities-main-top-wrapper .cities-main-right {
+    flex-direction: column;
+    width: 100%;
+  }
 }
 .cities-body-container .cities-main-wrapper .cities-main-top-wrapper .cities-main-right img {
   width: 50%;
   height: 100%;
   border-radius: 1em;
+}
+@media (max-width:800px) {
+  .cities-body-container .cities-main-wrapper .cities-main-top-wrapper .cities-main-right img {
+    width: 50%;
+  }
+}
+@media (max-width:500px) {
+  .cities-body-container .cities-main-wrapper .cities-main-top-wrapper .cities-main-right img {
+    width: 100%;
+  }
 }
 .cities-body-container .cities-main-wrapper .cities-main-top-wrapper .cities-main-right p {
   width: 50;
@@ -674,15 +816,36 @@ table {
   align-items: center;
   justify-content: center;
 }
+@media (max-width:800px) {
+  .cities-body-container .cities-main-wrapper .cities-main-bot-wrapper {
+    flex-direction: column;
+  }
+}
+@media (max-width:500px) {
+  .cities-body-container .cities-main-wrapper .cities-main-bot-wrapper {
+    flex-direction: column;
+  }
+}
+.cities-body-container .cities-main-wrapper .cities-main-bot-wrapper form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .cities-body-container .cities-main-wrapper .cities-main-bot-wrapper form input {
   margin: 1em;
   padding: 1em;
   text-align: center;
   font-size: 1em;
+  border-radius: 0.5em;
+}
+@media (max-width:800px) {
+  .cities-body-container .cities-main-wrapper .cities-main-bot-wrapper form input {
+    width: 50%;
+  }
 }
 .cities-body-container .cities-main-wrapper .cities-main-bot-wrapper button {
-  margin: 0.7em;
-  padding: 0.7em;
+  margin: 1em;
+  padding: 1em;
   text-align: center;
   background-color: maroon;
   font-size: 1em;
@@ -709,6 +872,16 @@ table {
   align-items: center;
   justify-content: center;
 }
+@media (max-width:800px) {
+  .cities-body-container .cities-footer-wrapper .cities-footer-nav .cities-footer-logo {
+    flex-direction: column;
+  }
+}
+@media (max-width:500px) {
+  .cities-body-container .cities-footer-wrapper .cities-footer-nav .cities-footer-logo {
+    display: none;
+  }
+}
 .cities-body-container .cities-footer-wrapper .cities-footer-nav .cities-footer-logo img {
   width: 15%;
 }
@@ -716,6 +889,16 @@ table {
   text-align: center;
   font-size: 1.5em;
   color: white;
+}
+@media (max-width:800px) {
+  .cities-body-container .cities-footer-wrapper .cities-footer-nav .cities-footer-logo h1 {
+    font-size: 1em;
+  }
+}
+@media (max-width:500px) {
+  .cities-body-container .cities-footer-wrapper .cities-footer-nav .cities-footer-logo h1 {
+    font-size: 1em;
+  }
 }
 .cities-body-container .cities-footer-wrapper .cities-footer-nav nav {
   display: flex;
