refactored my code, added some images and changed background colors

--- a/less/variables.less
+++ b/less/variables.less
@@ -12,3 +12,10 @@
 //media queries
 @mobile:~"(max-width:500px)";
 @tablet:~"(max-width:800px)";
+
+//Color assignments
+@font-color: @maroon;
+@bg-color: @maroon;
+
+//colors
+@maroon: maroon;
